--- a/newstart/templates/about.html
+++ b/newstart/templates/about.html
@@ -33,7 +33,7 @@
 <ul>
     <li style="list-style-type:none;"><strong>Objectives:</strong>
         <ul class="hehe">
-    <li style="list-style-type:circle;">To create welcoming and comfortable atmosphere</li>
+    <li style="list-style-type:circle;">To create welcoming and comfortable and peaceful atmosphere</li>
     <li> To offer diverse selection of high-quality teas and refreshments</li>
     <li> To Provide prompt, efficient, friendly, and relaxed service. </li>
     </ul>
