--- a/newstart/templates/home.html
+++ b/newstart/templates/home.html
@@ -20,7 +20,7 @@
         {% block content %}
         <div class="front">
          <div class="description" >
-           Chiya Maya team is proud to be the best tea seller of this city.
+           We Chiya Maya team is proud to be the best tea seller of this city.
 
          </div>
         </div>
