--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,7 @@ login page
 {% block content %}
 
 
+<link href="{% static 'style.css' %}" rel="stylesheet">
 
 <!-- {% if error %}
 <div id="error-message" class="blink">Invalid username or password!</div>
