--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -14,7 +14,7 @@ body{
     
 } */
 .picture{
-    background-image: url('../media/chai/login.jpg');
+    background-image: url('/static/media/chai/login.jpg');
     /* height: 800px;
     width:700px; */
     display: flex;
